tests/ui/rfc-2397-do-not-recommend/feature-gate-do_not_recommend.stderr
error[E0277]: the trait bound `u8: Foo` is not satisfied
  --> $DIR/feature-gate-do_not_recommend.rs:19:11
   |
LL |     stuff(1u8);
   |     ----- ^^^ the trait `Foo` is not implemented for `u8`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo` is implemented for `i32`
note: required for `u8` to implement `Bar`
  --> $DIR/feature-gate-do_not_recommend.rs:13:14
   |
LL | impl<T: Foo> Bar for T {
   |         ---  ^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `stuff`
  --> $DIR/feature-gate-do_not_recommend.rs:16:13
   |
LL | fn stuff<T: Bar>(_: T) {}
   |             ^^^ required by this bound in `stuff`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
